Fix: Add track.py models to repo and update .gitignore
- Add backend/models/track.py with Pydantic data models
- Update .gitignore to only ignore ML model files, not code models
- This fixes the missing models that were preventing the app from working

--- a/.gitignore
+++ b/.gitignore
@@ -62,8 +62,13 @@ cache/
 temp/
 tmp/
 
-# Models and Embeddings
-models/
+# ML Models and Embeddings (but keep code models)
+models/*.pkl
+models/*.joblib
+models/*.h5
+models/*.hdf5
+models/*.bin
+models/*.safetensors
 embeddings/
 *.pkl
 *.joblib
